--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@tailwindcss/vite": "^4.1.14",
     "axios": "^1.12.2",
     "axois": "^0.0.1-security",
+    "lucide-react": "^0.544.0",
     "motion": "^12.23.22",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
